@startuml

title __MY's Class Diagram__\n

  namespace com.itbird {
    namespace mvp.my {
      abstract class com.itbird.mvp.my.BaseActivity {
          {abstract} + getLayoutID()
          {abstract} + initPresenter()
          {abstract} + initView()
          # onCreate()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.my {
      abstract class com.itbird.mvp.my.BasePresenter {
          + isViewAttached()
          + onAttach()
          + onDetach()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.my {
      interface com.itbird.mvp.my.IPresenter {
          {abstract} + onAttach()
          {abstract} + onDetach()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.my {
      interface com.itbird.mvp.my.IView {
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.my {
      class com.itbird.mvp.my.TaskMyActivity {
          {static} - TAG : String
          + getLayoutID()
          + initPresenter()
          + initView()
          + updateTextView()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.my {
      interface com.itbird.mvp.my.TaskMyContract {
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.my {
      interface com.itbird.mvp.my.TaskMyContract.Presenter {
          {abstract} + loadDataFromModel()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.my {
      interface com.itbird.mvp.my.TaskMyContract.View {
          {abstract} + updateTextView()
      }
    }
  }
  

  namespace com.itbird {
    namespace mvp.my {
      class com.itbird.mvp.my.TaskMyPresenter {
          {static} - TAG : String
          + loadDataFromModel()
      }
    }
  }
  

  com.itbird.mvp.my.BaseActivity .up.|> com.itbird.mvp.my.IView
  com.itbird.mvp.my.BaseActivity -up-|> android.app.Activity
  com.itbird.mvp.my.BasePresenter .up.|> com.itbird.mvp.my.IPresenter
  com.itbird.mvp.my.BasePresenter o-- V : mView
  com.itbird.mvp.my.TaskMyActivity .up.|> com.itbird.mvp.my.TaskMyContract.View
  com.itbird.mvp.my.TaskMyActivity -up-|> com.itbird.mvp.my.BaseActivity
  com.itbird.mvp.my.TaskMyActivity o-- com.itbird.mvp.my.TaskMyPresenter : mPresenter
  com.itbird.mvp.my.TaskMyContract +-down- com.itbird.mvp.my.TaskMyContract.Presenter
  com.itbird.mvp.my.TaskMyContract +-down- com.itbird.mvp.my.TaskMyContract.View
  com.itbird.mvp.my.TaskMyPresenter .up.|> com.itbird.mvp.my.TaskMyContract.Presenter
  com.itbird.mvp.my.TaskMyPresenter -up-|> com.itbird.mvp.my.BasePresenter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
